--- a/vault/templates/statefulset.yaml
+++ b/vault/templates/statefulset.yaml
@@ -11,6 +11,7 @@ metadata:
 spec:
   serviceName: {{ template "vault.name" . }}
   replicas: {{ .Values.vault.replicas }}
+  podManagementPolicy: Parallel
   selector:
     matchLabels:
       app: {{ template "vault.name" . }}
