--- a/vault/templates/headless-service.yaml
+++ b/vault/templates/headless-service.yaml
@@ -3,13 +3,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "vault.name" . }}
+  annotations:
+    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
   labels:
     app: {{ template "vault.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
-  publishNotReadyAddresses: true
   ports:
     - name: clusterlistener
       protocol: TCP
