Add readiness probe. Add populating secrets on setup (#90)
* remove hardcoded node selector

* add readiness probe

* add readiness check. internally use a headless service that skips readiness checks, so that we can init properly

* add writing secrets on setup

* missing $ in init-vault

* correct the readiness probe scheme

* tolerate unready pods in statefulset

* publishNotReadyAddresses: true does not actually work. https://github.com/kubernetes/kubernetes/issues/58662

* silly me. headless services don't do port translation

--- a/vault/templates/statefulset.yaml
+++ b/vault/templates/statefulset.yaml
@@ -11,6 +11,7 @@ metadata:
 spec:
   serviceName: {{ template "vault.name" . }}
   replicas: {{ .Values.vault.replicas }}
+  podManagementPolicy: Parallel
   selector:
     matchLabels:
       app: {{ template "vault.name" . }}
@@ -19,8 +20,8 @@ spec:
       labels:
         app: {{ template "vault.name" . }}
     spec:
-      nodeSelector:
       {{- if .Values.vault.nodePool }}
+      nodeSelector:
         nodepool: {{ .Values.vault.nodePool | quote }}
       {{- end }}
       containers:
