--- a/vault/templates/unsealVault/_container.yaml
+++ b/vault/templates/unsealVault/_container.yaml
@@ -152,7 +152,7 @@ Create helm partial for Vault initialization
             -s -o /dev/null \
             -w %{http_code} \
             --location \
-              http://{{ template "vault.name" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}:{{ .Values.vault.listenerPort }}/v1/sys/health)
+              https://{{ template "vault.access" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
         {{- end }}
 
         # sleep for a 3 sec if failed
