--- a/vault/templates/setupVault/_container.yaml
+++ b/vault/templates/setupVault/_container.yaml
@@ -77,9 +77,35 @@ Create helm partial for Vault initialization
           --header "X-Vault-Token: ${rootToken}" \
           --location \
           --request POST \
-          --data {{ . | toJson | quote }} \
+          --data {{ .enable | toJson | quote }} \
           https://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }})
-        {{- else }}
+          
+        if [ ${healthCode} -ne ${EMPTY_BODY} ]; then
+          echo "Auth enable call for backend '{{ $key }}' did not return '${EMPTY_BODY}' - Got ${healthCode} !"
+          exit 1;
+        fi
+
+        {{- if .configure }}
+        healthCode=$(curl --connect-timeout 1 \
+          -s -o /dev/null \
+          -w %{http_code} \
+          --cert {{ $.Values.vault.tls.secret.mountPath }}/{{ $.Values.vault.tls.secret.certFile }} \
+          --cert-type PEM \
+          --key {{ $.Values.vault.tls.secret.mountPath }}/{{ $.Values.vault.tls.secret.keyFile }} \
+          --key-type PEM \
+          --cacert {{ $.Values.vault.tls.secret.mountPath }}/{{ $.Values.vault.tls.secret.caFile }} \
+          --header "X-Vault-Token: ${rootToken}" \
+          --location \
+          --request POST \
+          --data {{ .configure | toJson | quote }} \
+          https://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }}/config)
+        
+        if [ ${healthCode} -ne ${EMPTY_BODY} ]; then
+          echo "Auth configure call for backend '{{ $key }}' did not return '${EMPTY_BODY}' - Got ${healthCode} !"
+          exit 1;
+        fi
+        {{- end }}
+      {{- else }}
         curl --connect-timeout 1 \
           -s -o /dev/null \
           -w %{http_code} \
@@ -92,14 +118,29 @@ Create helm partial for Vault initialization
           --header "X-Vault-Token: ${rootToken}" \
           --location \
           --request POST \
-          --data {{ . | toJson | quote }} \
+          --data {{ .enable | toJson | quote }} \
             http://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }})
-        {{- end }}
-
+        
         if [ ${healthCode} -ne ${EMPTY_BODY} ]; then
           echo "Auth enable call for backend '{{ $key }}' did not return '${EMPTY_BODY}' - Got ${healthCode} !"
           exit 1;
         fi
+
+        {{- if .configure }}
+        healthCode=$(curl --connect-timeout 1 \
+          -s -o /dev/null \
+          --header "X-Vault-Token: ${rootToken}" \
+          --location \
+          --request POST \
+          --data {{ .configure | toJson | quote }} \
+            http://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }}/config)
+        
+        if [ ${healthCode} -ne ${EMPTY_BODY} ]; then
+          echo "Auth configure call for backend '{{ $key }}' did not return '${EMPTY_BODY}' - Got ${healthCode} !"
+          exit 1;
+        fi
+        {{- end }}
+      {{- end }}
       {{- end }}
 
       # setup secret backends
