--- a/charts/vault/templates/tests/test-vault-initialized.yaml
+++ b/charts/vault/templates/tests/test-vault-initialized.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   containers:
   - name: init-test
-    image: "{{.Values.vault.image}}:{{.Values.vault.imageTag}}"
+    image: "{{.Values.vault.image}}"
     imagePullPolicy: {{ .Values.vault.imagePullPolicy }}
     {{- if .Values.vault.tls.enabled }}
     volumeMounts:
