--- a/charts/vault/templates/tests/test-vault-policy-token.yaml
+++ b/charts/vault/templates/tests/test-vault-policy-token.yaml
@@ -12,7 +12,7 @@ spec:
   serviceAccountName: {{ template "vault.name" . }}-secret-rw
   containers:
   - name: token-test
-    image: "{{.Values.vault.image}}:{{.Values.vault.imageTag}}"
+    image: "{{.Values.vault.image}}"
     imagePullPolicy: {{ .Values.vault.imagePullPolicy }}
     {{- if .Values.vault.tls.enabled }}
     volumeMounts:
