--- a/charts/vault/values.yaml
+++ b/charts/vault/values.yaml
@@ -1,8 +1,7 @@
 ---
 clusterDomain: cluster.local
 vault:
-  image: quay.io/samsung_cnct/vault
-  imageTag: v0.9.3
+  image: quay.io/samsung_cnct/vault:prod
   imagePullPolicy: "Always"
   component: "vault"
   nodePort:
