convert version to label porperly

--- a/charts/vault/templates/run-vault-configmap.yaml
+++ b/charts/vault/templates/run-vault-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ template "vault.name" . }}-startscript
   labels:
     app: {{ template "vault.name" . }}-startscript
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ printf "%s-%s" .Chart.Name .Chart.Version | replace "+" "_" | trunc 63 }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 data:
