--- a/charts/vault/templates/headless-service.yaml
+++ b/charts/vault/templates/headless-service.yaml
@@ -7,7 +7,7 @@ metadata:
     service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
   labels:
     app: {{ template "vault.name" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ printf "%s-%s" .Chart.Name .Chart.Version | replace "+" "_" | trunc 63 }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
