--- a/charts/vault/templates/initjob-configmap.yaml
+++ b/charts/vault/templates/initjob-configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: vault-init-run
   labels:
     app: {{ template "vault.name" . }}-initscript
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    chart: {{ printf "%s-%s" .Chart.Name .Chart.Version | replace "+" "_" | trunc 63 }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 data:
