--- a/charts/vault/templates/setupVault/_container.yaml
+++ b/charts/vault/templates/setupVault/_container.yaml
@@ -46,7 +46,7 @@ Create helm partial for Vault initialization
       EMPTY_BODY=204
 
       # get the root token
-      rootToken=$(kubectl get secret {{ .Values.vault.setup.masterSecret | default (include "vault.name" .) }} -o json --namespace {{ .Release.Namespace }} | jq --raw-output '.data."unseal.json"' | base64 --decode | jq -r ".root_token")
+      rootToken=$(kubectl get secret {{ .Values.vault.setup.masterSecret | default (include "vault.name" .) }} -o json --namespace {{ .Release.Namespace }} | jq --raw-output '.data."unseal.json"' | base64 -d | jq -r ".root_token")
 
       # setup auth backends
       echo "Setting up auth backends"
