--- a/charts/vault/templates/tests/test-vault-policy-token.yaml
+++ b/charts/vault/templates/tests/test-vault-policy-token.yaml
@@ -80,7 +80,7 @@ spec:
         # get the root token
         rootToken=$(kubectl get secret {{ .Values.vault.setup.masterSecret | default (include "vault.name" .) }} \
           -o json \
-          -n {{ .Release.Namespace }} | jq --raw-output '.data."unseal.json"' | base64 --decode | jq --raw-output .root_token)
+          -n {{ .Release.Namespace }} | jq --raw-output '.data."unseal.json"' | base64 -d | jq --raw-output .root_token)
 
         # login with root token
         vault login -method=token token=${rootToken}
