use new buildarg format

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -5,7 +5,8 @@ envValues:
 rootfs:
   - image: samsung_cnct/vault
     buildArgs: 
-      KUBECTL_VERSION: "v1.9.2"
+      arg: KUBECTL_VERSION
+      value: "v1.9.2"
     context: vault
     chart: vault
     value: vault.image
